--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -83,7 +83,7 @@ img { width: 100%; height: 100%; }
 
 .gnb-area .gnb-wrap.on::before { opacity: 1; visibility: visible; }
 
-.gnb-area .gnb-wrap .inside-gnb { position: fixed; right: -100%; top: 0; width: 30%; height: 100%; min-height: 100%; background-color: #6D9886; color: #D9CAB3; -webkit-transition: right .8s ease-in-out; transition: right .8s ease-in-out; overflow: auto; }
+.gnb-area .gnb-wrap .inside-gnb { position: fixed; right: -100%; top: 0; width: 35vw; height: 100%; min-height: 100%; background-color: #6D9886; color: #D9CAB3; -webkit-transition: right .8s ease-in-out; transition: right .8s ease-in-out; overflow: auto; }
 
 .gnb-area .gnb-wrap .inside-gnb .inside-gnb-wrap { padding: 198px 97px 208px 0; }
 
@@ -157,7 +157,7 @@ footer { position: relative; background-color: #212121; padding: 283px 20% 108px
 
 .fix-top .btn { position: absolute; top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); display: block; width: 30px; height: 30px; margin-top: 2px; -webkit-transform-origin: 50% 50%; transform-origin: 50% 50%; }
 
-.fix-top .btn::before { content: ''; -webkit-transform: rotate(90deg); transform: rotate(90deg); display: block; width: 24px; height: 24px; margin: 4px auto 0; background: url(/asset/images/btn/right-arrow.png) center no-repeat; background-size: cover; opacity: 1; -webkit-transition: .5s; transition: .5s; }
+.fix-top .btn::before { content: ''; -webkit-transform: rotate(90deg); transform: rotate(90deg); display: block; width: 24px; height: 24px; margin: 4px auto 0; background: url(../images/btn/right-arrow.png) center/cover no-repeat; opacity: 1; -webkit-transition: .5s; transition: .5s; }
 
 .fix-top.up .btn::before { -webkit-transform: rotate(-90deg); transform: rotate(-90deg); }
 
@@ -167,7 +167,7 @@ main::after { content: ''; display: block; clear: both; }
 
 .sc-info { position: relative; margin-bottom: 100px; }
 
-.sc-info .bg-area { position: relative; left: 0; top: 0; width: 100%; }
+.sc-info .bg-area { position: relative; left: 0; top: 0; width: 100%; -webkit-box-sizing: border-box; box-sizing: border-box; overflow: hidden; }
 
 .sc-info .bg-area .bg-image { position: relative; width: 100%; }
 
@@ -207,7 +207,7 @@ main::after { content: ''; display: block; clear: both; }
 
 .sc-goods .slide-tit .slide01 .swiper-wrapper .swiper-slide { display: -webkit-box; display: -ms-flexbox; display: flex; height: auto; }
 
-.sc-goods .slide-tit h3 { display: inline-block; height: 75px; line-height: 75px; font-size: 50px; padding-left: 65px; background: url(/asset/images/logo/sc-goods-barma.png) 0 10px no-repeat; background-size: 50px 50px; }
+.sc-goods .slide-tit h3 { display: inline-block; height: 75px; line-height: 75px; font-size: 50px; padding-left: 65px; background: url(../images/logo/sc-goods-barma.png) 0 10px no-repeat; background-size: 50px 50px; }
 
 .sc-goods .slide-txt { width: 100%; height: 10vw; position: absolute; left: 0; top: 50%; -webkit-transform: translate(0, 100%); transform: translate(0, 100%); opacity: 0; }
 
@@ -315,7 +315,7 @@ main::after { content: ''; display: block; clear: both; }
 
 .sub-area { padding: 132px 18% 219px; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; }
 
-.sub-area > section { padding: 0 40px 0 70px; position: relative; -webkit-box-sizing: border-box; box-sizing: border-box; }
+.sub-area > section { padding: 0 40px 0 70px; position: relative; -webkit-box-sizing: border-box; box-sizing: border-box; width: 50%; }
 
 .sub-area > section .side-bar { position: absolute; left: 0; top: 0; display: inline-block; width: 1px; height: 100%; background-color: rgba(0, 0, 0, 0.3); -webkit-transform-origin: 50% 100%; transform-origin: 50% 100%; -webkit-transform: scale(1, 0); transform: scale(1, 0); }
 
@@ -329,15 +329,15 @@ main::after { content: ''; display: block; clear: both; }
 
 .sub-area .link-more { position: relative; display: inline-block; width: 73px; height: 73px; border: 1px solid #000; border-radius: 50%; margin-top: 50px; overflow: hidden; }
 
-.sub-area .link-more::before { content: ''; position: absolute; left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); display: inline-block; width: 24px; height: 24px; background: url(/asset/images/btn/right-arrow.png) center no-repeat; background-size: cover; opacity: 1; -webkit-transition: .5s; transition: .5s; }
+.sub-area .link-more::before { content: ''; position: absolute; left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); display: inline-block; width: 24px; height: 24px; background: url(../images/btn/right-arrow.png) center no-repeat; background-size: cover; opacity: 1; -webkit-transition: .5s; transition: .5s; }
 
-.sub-area .link-more::after { content: ''; position: absolute; left: -50%; top: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); display: inline-block; width: 24px; height: 24px; background: url(/asset/images/btn/right-arrow.png) center no-repeat; background-size: cover; -webkit-transition: .5s; transition: .5s; }
+.sub-area .link-more::after { content: ''; position: absolute; left: -50%; top: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); display: inline-block; width: 24px; height: 24px; background: url(../images/btn/right-arrow.png) center no-repeat; background-size: cover; -webkit-transition: .5s; transition: .5s; }
 
 .sub-area .link-more.move::before { left: 100%; opacity: 0; }
 
 .sub-area .link-more.move::after { left: 50%; }
 
-.sub-area .bg-img { position: absolute; left: 30%; bottom: -15%; width: 40%; height: auto; background: #F6F6F6; overflow: hidden; }
+.sub-area .bg-img { position: absolute; left: 12vw; bottom: -2vw; width: 40%; height: auto; background: #F6F6F6; overflow: hidden; }
 
 .sub-area .bg-img::before { content: ''; position: absolute; z-index: 1; left: 0; top: 0; width: 0; height: 100%; -webkit-transition: .5s; transition: .5s; background-color: #F6F6F6; }
 
