--- a/asset/scss/layout/_header.scss
+++ b/asset/scss/layout/_header.scss
@@ -81,7 +81,7 @@
         .inside-gnb{
             position: fixed;
             right: -100%;top: 0;
-            width: 30%;height: 100%;
+            width: 35vw;height: 100%;
             min-height: 100%;
             background-color: #6D9886;
             color: #D9CAB3;
